--- a/proyectos.html
+++ b/proyectos.html
@@ -28,6 +28,17 @@
         <section class="row justify-content-center">
             <article class="row justify-content-center align-items-start mb-3">
                 <div class="col-md-4 order-last order-md-first">
+                    <img src="img/kanban-app.png" class="imgContact">
+                </div>
+                <div class="col-md-4 position-relative d-flex flex-column">
+                    <h2>KanbanApp – Organización y Gestión de Tareas para Equipos</h2>
+                    <p>Desarrollé una aplicación de gestión de tareas utilizando C# para el backend y frontend, diseñada para mejorar la organización y colaboración dentro de los equipos de trabajo.</p>
+                    <p>KanbanApp permite crear y administrar equipos, asignar tareas, visualizar su estado en un tablero Kanban y optimizar la productividad con una gestión eficiente del flujo de trabajo.</p>
+                </div>
+            </article>
+            <hr class="col-1 mt-4 mb-4">
+            <article class="row justify-content-center align-items-start mb-3">
+                <div class="col-md-4 order-last order-md-first">
                     <img src="img/proyecto-gestion-de-clientes.png" class="imgContact">
                 </div>
                 <div class="col-md-4 position-relative d-flex flex-column">
